update module type

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shy-boti",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
